hard-gists/46c9d4ed1ea43c3d916b/run.log
=== Docker Run Log for 46c9d4ed1ea43c3d916b ===
Started at: Mi 29. Okt 14:57:40 CET 2025

[2025-10-29 14:57:41] START: Running container for 46c9d4ed1ea43c3d916b
[2025-10-29 14:57:41] SUCCESS: Container b4cfb728e5585a9a3a0d5ea9f4fabc3b351cf56dd8ca9d87891c02e632adb440 started for 46c9d4ed1ea43c3d916b
=== Container logs for 46c9d4ed1ea43c3d916b ===
  File "/snippet.py", line 100
    except Exception, detail: 
           ^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 46c9d4ed1ea43c3d916b ===
[2025-10-29 14:57:43] INFO: Container b4cfb728e5585a9a3a0d5ea9f4fabc3b351cf56dd8ca9d87891c02e632adb440 has stopped
